type a burger spacing fixed. cookies layout fixed. banner height on slide 1 fixed

--- a/scss/modules/_banner.scss
+++ b/scss/modules/_banner.scss
@@ -61,6 +61,10 @@ section .banner-carousel {
     }
 }
 
+.banner-large {
+    padding-bottom: 70px;
+}
+
 .banner-text-wrapper {
     color: #fff;
     position: relative;
