--- a/scss/modules/_burger.scss
+++ b/scss/modules/_burger.scss
@@ -32,7 +32,7 @@
 
 
         &-top{
-            top: 30%;
+            top: 28%;
         } 
         &-middle{
             top: 47%;
